--- a/src/app/Aboutus/page.module.css
+++ b/src/app/Aboutus/page.module.css
@@ -1,3 +1,22 @@
+/* โหลดหน้าจอแบบ overlay */
+.loading-overlay {
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100vw;
+  height: 100vh;
+  background-color: #0a3e8e;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  z-index: 9999;
+}
+
+.loading-overlay img {
+  margin-bottom: 20px;
+}
+
 .container {
   padding: 2rem 1rem;
   max-width: 960px;
