--- a/src/components/MarketingServices/stely.css
+++ b/src/components/MarketingServices/stely.css
@@ -1,7 +1,7 @@
 .marketing-section {
   background-color: #4d9ef6;
   padding: 60px 0;
-  background-image: repeating-linear-gradient(#37c6f7) ;
+  background-image: repeating-linear-gradient(#01a2ca) ;
   background-size: 40px 40px;
   border-radius: 8px 8px 0 0;
 }
