--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -1,4 +1,8 @@
-/* รีเซ็ตพื้นฐาน */
+/* รีเซ็ตพื้นฐาน globals.css*/
+
+@tailwind base;
+@tailwind components;
+@tailwind utilities;
 html,
 body {
   margin: 0;
@@ -6,7 +10,6 @@ body {
   width: 100%;
   min-height: 100%;
   font-family: 'Anuphan', sans-serif;
-  background-color: #fff;
   color: #000;
   scroll-behavior: smooth;
 }
